--- a/css/common.css
+++ b/css/common.css
@@ -79,7 +79,7 @@ h1{
   }
 
 .groval-nav{
-    background: #ffef99;
+    background-color: rgba(255, 227, 32, 0.35);
     width: 840px;
     top: 190px;
     position: relative;
