--- a/common.css
+++ b/common.css
@@ -173,7 +173,6 @@ h1 img{
   font-size: 13px;
   top: -34px;
   position: relative;
-
 }
 
 .profile{
@@ -192,13 +191,18 @@ h1 img{
 
 h2{
   font-size: 34px;
+  font-size: 44px;
   font-weight: bold;
+  font-family: "PxGroteskRegular",neue-haas-grotesk-display,Helvetica,Arial,sans-serif;
+  font-weight: 600;
+  color: #a2a2a2;
 }
 
 h3{
   font-size: 15px;
   padding-bottom: 0;
   font-weight: bold;
+  color: #a2a2a2;
 }
 
 .common-text{
@@ -368,7 +372,7 @@ footer{
 }
 
 .design_box{
-  width: 90%;
+  width: 700px;
   margin: 0 auto;
 }
 
@@ -520,12 +524,12 @@ footer{
   
   .content-section-down .common-text{
     font-size: 14px;
-    width: 85%;
+    width: 70%;
     text-align: left;
   }
 
   .design_box{
-    width: 90%;
+    width: 70%;
   }
   
   .design_box img{
