--- a/common.css
+++ b/common.css
@@ -196,6 +196,7 @@ h2{
   /* font-family: "PxGroteskRegular",neue-haas-grotesk-display,Helvetica,Arial,sans-serif;
   font-weight: 600;
   color: #a2a2a2; */
+  line-height: 44px;
 }
 
 h3{
